--- a/src/components/Piece.scss
+++ b/src/components/Piece.scss
@@ -10,6 +10,15 @@
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
+
+	// Fix dragging thumbnail issues on safari
+	@media not all and (min-resolution: 0.001dpcm) {
+		@supports (-webkit-appearance: none) {
+			margin-top: 0.325rem;
+			top: 0;
+			transform: translateY(0%);
+		}
+	}
 }
 
 .red-piece {
