--- a/src/components/Analytics.scss
+++ b/src/components/Analytics.scss
@@ -1,3 +1,21 @@
 .analytics {
 	display: inline-block;
+	color: #474747;
+	min-width: 15rem;
+	flex-grow: 100;
+	font-size: x-large;
+
+	.reset-button {
+		background-color: #929292;
+		border: 4px solid #474747;
+		color: white;
+		border-radius: 1rem;
+		padding: 1rem 1rem;
+		text-align: center;
+	}
+
+	.reset-button:hover {
+		background-color: #ffb8cf;
+		border: 4px solid #c9426f;
+	}
 }
