--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,4 +1,11 @@
 .App {
+	background-color: #f2f2f2;
+	width: 100vw;
+	height: 100vh;
+
+	@media (max-width: 816px) {
+		height: 120vh;
+	}
 }
 
 .heading {
@@ -6,14 +13,14 @@
 	padding-left: 0.5rem;
 	.subtitle {
 		margin-top: -1rem;
-
-		.red {
-			color: #c9426f;
-		}
-		.blue {
-			color: #42a2c9;
-		}
 	}
+}
+
+.red {
+	color: #c9426f;
+}
+.blue {
+	color: #42a2c9;
 }
 
 .mid-section {
