--- a/src/components/Analytics.scss
+++ b/src/components/Analytics.scss
@@ -6,8 +6,8 @@
 	font-size: x-large;
 
 	.reset-button {
-		background-color: #929292;
-		border: 4px solid #474747;
+		background-color: #474747;
+		border: none;
 		color: white;
 		border-radius: 1rem;
 		padding: 1rem 1rem;
@@ -15,7 +15,8 @@
 	}
 
 	.reset-button:hover {
-		background-color: #ffb8cf;
-		border: 4px solid #c9426f;
+		-webkit-box-shadow: 0px 0px 13px -2px rgba(0, 0, 0, 1);
+		-moz-box-shadow: 0px 0px 13px -2px rgba(0, 0, 0, 1);
+		box-shadow: 0px 0px 13px -2px rgba(0, 0, 0, 1);
 	}
 }
